[gd_scene load_steps=6 format=3 uid="uid://dsomnmlma85vg"]

[ext_resource type="Script" path="res://sabotage_field/select_duellist.gd" id="1_0yyft"]
[ext_resource type="Texture2D" uid="uid://brrlsmkyej88s" path="res://player/dollar.svg" id="2_64ga7"]
[ext_resource type="Texture2D" uid="uid://l8obnn5jj4kn" path="res://player/pound.svg" id="3_ht8ik"]
[ext_resource type="Texture2D" uid="uid://bkpfvf1dlrbnn" path="res://player/euro.svg" id="4_pr8a7"]
[ext_resource type="Texture2D" uid="uid://cvp5ue5844a1n" path="res://player/yen.svg" id="5_7x4g5"]

[node name="select_duellist" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0yyft")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -192.0
offset_right = 448.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_top = 28.0
offset_right = 192.0
offset_bottom = 92.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 37
text = "Choose your duellist!"

[node name="Player1" type="Button" parent="Panel"]
layout_mode = 2
anchor_left = 0.0357143
anchor_top = 0.34375
anchor_right = -0.0279018
anchor_bottom = 0.591146
offset_left = 64.0
offset_top = 24.0
offset_right = 280.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
theme_override_font_sizes/font_size = 28
icon = ExtResource("2_64ga7")
metadata/_edit_use_anchors_ = true

[node name="Player2" type="Button" parent="Panel"]
layout_mode = 2
anchor_left = 0.107143
anchor_top = -0.125
anchor_right = 0.0435268
anchor_bottom = 0.122396
offset_left = 192.0
offset_top = 204.0
offset_right = 408.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
theme_override_font_sizes/font_size = 28
icon = ExtResource("4_pr8a7")
metadata/_edit_use_anchors_ = true

[node name="Player3" type="Button" parent="Panel"]
layout_mode = 2
anchor_left = -0.00892857
anchor_top = -0.125
anchor_right = -0.0725446
anchor_bottom = 0.122396
offset_left = 488.0
offset_top = 204.0
offset_right = 704.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
theme_override_font_sizes/font_size = 28
icon = ExtResource("5_7x4g5")
metadata/_edit_use_anchors_ = true

[node name="Player4" type="Button" parent="Panel"]
layout_mode = 2
anchor_left = 0.205357
anchor_top = 0.0833333
anchor_right = 0.141741
anchor_bottom = 0.330729
offset_left = 488.0
offset_top = 124.0
offset_right = 704.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
theme_override_font_sizes/font_size = 28
icon = ExtResource("3_ht8ik")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Panel/Player1" to="." method="_on_player_1_pressed"]
[connection signal="pressed" from="Panel/Player2" to="." method="_on_player_2_pressed"]
[connection signal="pressed" from="Panel/Player3" to="." method="_on_player_3_pressed"]
[connection signal="pressed" from="Panel/Player4" to="." method="_on_player_4_pressed"]
